@@ -1,4 +1,4 @@
-/* $Id: rbgnome-canvas-group.c,v 1.3 2002/07/29 15:50:00 mutoh Exp $ */
+/* $Id: rbgnome-canvas-group.c,v 1.4 2002/08/17 17:30:34 mutoh Exp $ */
 
 /* Gnome::Animator widget for Ruby/Gnome
  * Copyright (C) 2001 Neil Conway <neilconway@rogers.com>
@@ -21,17 +21,14 @@
 #include "rbgnome.h"
 
 VALUE gnoCanvasGroup;
+static VALUE item_type_hash;
 
-static int
-kind_of(klass, target)
-    VALUE klass, target;
+void
+rbgnome_register_citem_type(klass, type)
+    VALUE klass;
+    GtkType type;
 {
-    while (klass) {
-	if (klass == target)
-	    return 1;
-	klass = RCLASS(klass)->super;
-    }
-    return 0;
+    rb_hash_aset(item_type_hash, klass, INT2NUM(type));
 }
 
 static VALUE
@@ -40,37 +37,23 @@ group_item_new(argc, argv, self)
     VALUE *argv;
     VALUE self;
 {
-    VALUE klass, citem;
-    GtkType type;
+    VALUE klass, citem, type = Qnil;
     GnomeCanvasItem* ci;
 
     if (argc == 0) {
 	rb_raise(rb_eArgError, "wrong # of argument.");
     }
-    klass = argv[0];
-    Check_Type(klass, T_CLASS);
-    if (kind_of(klass, gnoCanvasLine)) {
-	type = GNOME_TYPE_CANVAS_LINE;
-    } else if (kind_of(klass, gnoCanvasPolygon)) {
-	type = GNOME_TYPE_CANVAS_POLYGON;
-    } else if (kind_of(klass, gnoCanvasRect)) {
-	type = GNOME_TYPE_CANVAS_RECT;
-    } else if (kind_of(klass, gnoCanvasEllipse)) {
-	type = GNOME_TYPE_CANVAS_ELLIPSE;
-    } else if (kind_of(klass, gnoCanvasText)) {
-	type = GNOME_TYPE_CANVAS_TEXT;
-    } else if (kind_of(klass, gnoCanvasImage)) {
-	type = GNOME_TYPE_CANVAS_IMAGE;
-    } else if (kind_of(klass, gnoCanvasWidget)) {
-	type = GNOME_TYPE_CANVAS_WIDGET;
-    } else if (kind_of(klass, gnoCanvasGroup)) {
-	type = GNOME_TYPE_CANVAS_GROUP;
-    } else {
+    Check_Type(argv[0], T_CLASS);
+    for (klass = argv[0];klass != rb_cObject;klass = RCLASS(klass)->super) {
+	type = rb_hash_aref(item_type_hash, klass);
+	if (!NIL_P(type))
+	    break;
+    }
+    if (NIL_P(type)) {
 	rb_raise(rb_eTypeError, "wrong argument type (expect a sub-class of Gnome::CanvasItem");
     }
-
-    ci = gnome_canvas_item_new(GNOME_CANVAS_GROUP(get_gobject(self)), type, NULL);
-    citem = make_gobject(klass, GTK_OBJECT(ci));
+    ci = gnome_canvas_item_new(GNOME_CANVAS_GROUP(get_gobject(self)), NUM2INT(type), NULL);
+    citem = make_gobject(argv[0], GTK_OBJECT(ci));
     add_relative(self, citem);
     if (argc > 1) {
 	rb_funcall2(citem, rb_intern("set"), argc - 1, &(argv[1]));
@@ -90,6 +73,9 @@ group_child_bounds(self, item)
 void
 Init_gnome_canvas_group()
 {
+    item_type_hash = rb_hash_new();
+    rb_global_variable(&item_type_hash);
+
     gnoCanvasGroup = rb_define_class_under(mGnome, "CanvasGroup", gnoCanvasItem);
     rb_define_method(gnoCanvasGroup, "item_new", group_item_new, -1);
     rb_define_method(gnoCanvasGroup, "child_bounds", group_child_bounds, 1);
