@@ -1,3 +1,10 @@
+2002-08-18  KUBO Takehiro <kubo@jiubao.org>
+            
+   * src/rbgnome-canvas-item.c: BugFix Gnome::CanvasItem#grab, #ungrab.
+   * src/rbgnome-canvas-group.c, rbgnome.h: Support GtkType dynamically.
+   * sample/test-gnome/canvas_arrowhead.rb, canvas-primitives.rb:
+   Change mouse cursor icon when cursor is dragged.
+
 2002-08-06  KUBO Takehiro <kubo@jiubao.org>
 
 	* extconf.rb, src/lib/gnome.rb, src/rbgnome-canvas.c, 
